objects/SBQQ__CustomActionCondition__c.object
<CustomObject>
    <fields>
        <fullName>SBQQ__CustomAction__c</fullName>
        <description>Custom Action that is running this Condition.</description>
        <inlineHelpText>Custom Action that is running this Condition.</inlineHelpText>
        <label>Custom Action</label>
        <referenceTo>SBQQ__CustomAction__c</referenceTo>
        <relationshipLabel>Custom Action Conditions</relationshipLabel>
        <relationshipName>Custom_Action_Conditions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SBQQ__Field__c</fullName>
        <description>Field on Quote Line or Product Option object that is evaluated by this condition.</description>
        <inlineHelpText>Choose the field that should contain the value you enter in the Value field.</inlineHelpText>
        <label>Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product Code</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__FilterValue__c</fullName>
        <description>Value to evaluate against.</description>
        <inlineHelpText>Enter the value you want to match in the field you selected using the operator chosen.</inlineHelpText>
        <label>Filter Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__Operator__c</fullName>
        <description>The operator that is applied when comparing the Field with the Value.</description>
        <inlineHelpText>Select the operator to apply when comparing the Field with the Value.</inlineHelpText>
        <label>Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>equals</fullName>
                </value>
                <value>
                    <fullName>not equals</fullName>
                </value>
                <value>
                    <fullName>less than</fullName>
                </value>
                <value>
                    <fullName>less or equals</fullName>
                </value>
                <value>
                    <fullName>greater than</fullName>
                </value>
                <value>
                    <fullName>greater or equals</fullName>
                </value>
                <value>
                    <fullName>starts with</fullName>
                </value>
                <value>
                    <fullName>ends with</fullName>
                </value>
                <value>
                    <fullName>contains</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ParentActionIsActive__c</fullName>
        <formula>SBQQ__CustomAction__r.SBQQ__Active__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ParentConditionIsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__TargetObject__c</fullName>
        <description>Object against which the condition is evaluated.</description>
        <inlineHelpText>Object against which the condition is evaluated.</inlineHelpText>
        <label>Target Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Quote</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <customHelpPage>SBQQ__CustomActionsHelp</customHelpPage>
    <description>Condition that determines if the Action should be rendered on the page.</description>
    <label>Custom Action Condition</label>
    <nameField>
        <label>Custom Action Condition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom Action Conditions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>